create auth routes
