# server/api/controllers/auth/router.js
@@ -1,0 +1,8 @@
+import * as express from "express";
+import controller from "./controller";
+
+export default express
+  .Router()
+  // .post("/signup", controller.signup)
+  .post("/login", controller.login)
+  .post("/google-login", controller.googleLogin);
