# server/common/api.yml
@@ -6,126 +6,135 @@ info:
 servers:
   - url: /api/v1
 tags:
-  - name: Examples
-    description: Simple example endpoints
-  - name: Specification
-    description: The swagger API specification
+  - name: Auth Service
+    description: Auth Service endpoints
+  - name: User Service
+    description: User Service endpoints
+
 paths:
-  /examples:
-    get:
-      tags:
-        - Examples
-      description: Fetch all examples
-      responses:
-        200:
-          description: Return the example with the specified id
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Example'
-        4XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        5XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
+  # /auth/signup:
+  #   post:
+  #     tags:
+  #       - Auth Service
+  #     requestBody:
+  #       content:
+  #         application/json:
+  #           schema:
+  #             $ref: "#/components/schemas/SignUpBody"
+  #       required: true
+  #     responses:
+  #       200:
+  #         description: Success
+  #         content:
+  #           application/json:
+  #             schema:
+  #               $ref: "#/components/schemas/SignUpResponse"
+
+  /auth/login:
     post:
       tags:
-        - Examples
-      description: Create a new example
+        - Auth Service
       requestBody:
-        description: an example
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ExampleBody'
+              $ref: "#/components/schemas/LoginBody"
         required: true
       responses:
-        201:
-          description: Return the example with the specified id
+        200:
+          description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
-        4XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        5XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /examples/{id}:
-    get:
+                $ref: "#/components/schemas/SignUpResponse"
+
+  /auth/google-login:
+    post:
       tags:
-        - Examples
-      parameters:
-        - name: id
-          in: path
-          description: The id of the example to retrieve
-          required: true
-          schema:
-            type: integer
+        - Auth Service
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/GoogleLoginBody"
+        required: true
       responses:
         200:
-          description: Return the example with the specified id
+          description: Success
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Example'
-        4XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-        5XX:
-          description: Example not found
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/Error'
-  /spec:
-    get:
-      tags:
-        - Specification
-      responses:
-        200:
-          description: Return the API specification
-          content: {}
+                $ref: "#/components/schemas/SignUpResponse"
+
 components:
   schemas:
-    Example:
+    SignUpResponse:
       type: object
       properties:
-        id:
-          type: integer
-          example: 3
+        token:
+          type: string
+          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
+
+    SignUpBody:
+      type: object
+      required:
+        - name
+        - email
+        - password
+        - phone
+        - role
+        - dob
+        - gender
+      properties:
         name:
           type: string
-          example: example 3
+          example: "Raj Varsani"
+        email:
+          type: string
+          format: email
+          example: "imt_2020111@iiitm.ac.in"
+        password:
+          type: string
+          example: "password"
+        phone:
+          type: string
+          example: "1234567890"
+        role:
+          type: string
+          enum: ["doctor", "patient", "attendant", "admin"]
+          example: "patient"
+        dob:
+          type: string
+          format: date
+          example: "2003-07-09"
+        gender:
+          type: string
+          example: "Male"
+          enum: ["Male", "Female", "Others"]
+
+    LoginBody:
+      type: object
+      required:
+        - email
+        - password
+      properties:
+        email:
+          type: string
+          format: email
+          example: "johndoe@test.com"
+        password:
+          type: string
+          example: "password"
+
+    GoogleLoginBody:
+      type: object
+      required:
+        - code
+      properties:
+        code:
+          type: string
+          example: "4/0AY0e-g5Uq7q3"
+
     Error:
       type: object
       additionalProperties: true
-
-    ExampleBody:
-      title: example
-      required:
-        - name
-      type: object
-      properties:
-        name:
-          type: string
-          example: no_stress
