# server/models/UserModel.js
@@ -1,10 +1,40 @@
-import mongoose from 'mongoose';
+import mongoose from "mongoose";
 
-const User = new mongoose.Schema({
-  name: {
-    type: String,
-    required: [true, "Name missing!"]
+const User = new mongoose.Schema(
+  {
+    name: {
+      type: String,
+      required: true,
+    },
+    email: {
+      type: String,
+      required: true,
+    },
+    password: {
+      type: String,
+    },
+    phone: {
+      type: String,
+      required: true,
+    },
+    role: {
+      type: String,
+      enum: ["doctor", "patient", "attendant", "admin"],
+      required: true,
+    },
+    dob: {
+      type: Date,
+      required: true,
+    },
+    gender: {
+      type: String,
+      enum: ["Male", "Female", "Others"],
+      required: true,
+    },
+  },
+  {
+    timestamps: true,
   }
-});
+);
 
-export default mongoose.model('User', User);
+export default mongoose.model("User", User);
